# finite-clock

./: .gitignore  Cargo.toml  README.md
python/: countdown.py  display.py  image_renderer.py  life_expectancy.py  main.py
python/assets/: generate_image.py
src/: main.rs  renderer.rs
src/utils/: countdown.rs  mod.rs  scraper.rs
